--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     .bgimg-1 {
       background-position: center;
       background-size: cover;
-      background-image: url("/aicamera_back.webp");
+      background-image: url("aicamera_back.webp");
       min-height: 100%;
     }
 
