--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     .bgimg-1 {
       background-position: center;
       background-size: cover;
-      background-image: url("aicamera_back.webp");
+      background-image: url("https://images.squarespace-cdn.com/content/v1/5469759be4b0261a3b031a53/1604464531521-7H5V5477J02DDPHJLHSY/construction-site-camera.jpg");
       min-height: 100%;
     }
 
